Enhance MDX components and FAQ documentation structure
- Integrated built-in components such as Accordion, Steps, Tabs, and ImageZoom for improved documentation interactivity.
- Updated FAQ content with structured accordions and steps for better user experience.
- Refined documentation language and organization for clarity and accessibility.
- Added callouts and cards for enhanced visual guidance and support options.

--- a/src/content/docs/patient/en/faq.mdx
+++ b/src/content/docs/patient/en/faq.mdx
@@ -3,194 +3,332 @@ title: Frequently Asked Questions
 description: Common questions and answers about using Eleva Care as a patient.
 ---
 
-# Frequently Asked Questions
+Find answers to common questions about using Eleva Care. Click any question to expand the answer.
 
-Find answers to common questions about using Eleva Care.
+<Callout title="Can't find your answer?">
+  Contact us at [support@eleva.care](mailto:support@eleva.care) and we'll be happy to help.
+</Callout>
 
 ## Getting Started
 
-### What is Eleva Care?
+<Accordions type="single">
 
+<Accordion title="What is Eleva Care?" id="what-is-eleva-care">
 Eleva Care is a digital health platform that connects patients with independent, licensed women's health experts. We provide the technology for booking, payments, and video consultations, while healthcare services are delivered by independent professionals.
 
-### How do I create an account?
+Our platform specializes in:
 
-1. Visit [eleva.care](https://eleva.care)
-2. Click **Sign Up**
-3. Enter your email or use social login
-4. Complete your profile
-5. Start browsing experts
+- Pregnancy & postpartum care
+- Pelvic health
+- Menopause management
+- Sexual health
+  </Accordion>
 
-### Is Eleva Care free to use?
+<Accordion title="How do I create an account?" id="create-account">
+  <Steps>
+    <Step>### Visit eleva.care Go to [eleva.care](https://eleva.care) and click **Sign Up**</Step>
+    <Step>### Choose your sign-up method Enter your email or use social login (Google, Apple)</Step>
+    <Step>
+      ### Complete your profile Add your basic information to help us personalize your experience
+    </Step>
+    <Step>### Start browsing Explore our network of women's health experts</Step>
+  </Steps>
+</Accordion>
 
-Creating an account and browsing experts is free. You only pay when you book an appointment. Each expert sets their own consultation fees.
+<Accordion title="Is Eleva Care free to use?" id="free-to-use">
+**Yes, creating an account and browsing is completely free!**
+
+You only pay when you book an appointment. Each expert sets their own consultation fees, which you'll see clearly before booking.
+
+</Accordion>
+
+</Accordions>
 
 ## Booking Appointments
 
-### How do I find the right expert?
+<Accordions type="single">
 
-Use our search and filter options:
-- Browse by specialty (pregnancy, pelvic health, menopause, etc.)
-- Filter by language, location, and availability
-- Read expert profiles and patient reviews
-- View credentials and experience
+<Accordion title="How do I find the right expert?" id="find-expert">
+Use our powerful search and filter options:
 
-### Can I book same-day appointments?
+| Filter                | Options                                            |
+| --------------------- | -------------------------------------------------- |
+| **Specialty**         | Pregnancy, pelvic health, menopause, sexual health |
+| **Language**          | English, Portuguese, Spanish, and more             |
+| **Availability**      | Today, this week, specific dates                   |
+| **Consultation type** | Video call, in-person                              |
 
-Availability depends on the expert. Some experts offer same-day appointments, while others may require advance booking. Check the expert's calendar for available times.
+<Callout type="idea">
+  **Pro tip:** Read expert profiles and patient reviews to find the best match for your needs.
+</Callout>
+</Accordion>
 
-### What if I need to reschedule?
+<Accordion title="Can I book same-day appointments?" id="same-day">
+It depends on the expert's availability. Some experts offer same-day appointments, while others may require advance booking.
 
-You can reschedule from your patient dashboard:
-1. Go to **My Appointments**
-2. Click on the appointment
-3. Select **Reschedule**
-4. Choose a new time
+**How to find same-day availability:**
 
-Reschedule at least 24 hours in advance to avoid fees.
+1. Use the date filter and select "Today"
+2. Browse experts with open slots
+3. Book directly from their calendar
+   </Accordion>
 
-### Can I book appointments for family members?
+<Accordion title="What if I need to reschedule?" id="reschedule">
+You can easily reschedule from your patient dashboard:
 
-Currently, each patient needs their own account. For minors, a parent or guardian should create the account and attend the consultation.
+<Steps>
+  <Step>### Go to My Appointments Find the appointment you want to reschedule</Step>
+  <Step>### Click Reschedule Select a new date and time from available slots</Step>
+  <Step>### Confirm Your expert will be notified automatically</Step>
+</Steps>
 
-## Consultations
+<Callout type="warn">
+  **Important:** Reschedule at least 24 hours in advance to avoid fees.
+</Callout>
+</Accordion>
 
-### How do video consultations work?
+<Accordion title="Can I book appointments for family members?" id="family-members">
+  Currently, each patient needs their own account. For minors, a parent or guardian should: - Create
+  the account - Book the appointment - Attend the consultation with the minor
+</Accordion>
 
-1. Book your appointment
-2. Receive confirmation with video link
-3. Click **Join Call** at your appointment time
-4. Connect with your expert via secure video
+</Accordions>
 
-### What technology do I need?
+## Video Consultations
 
-- A device with camera and microphone (phone, tablet, or computer)
-- Stable internet connection
-- Updated web browser (Chrome, Safari, Firefox, or Edge)
+<Accordions type="single">
 
-### What if I have technical issues during my call?
+<Accordion title="How do video consultations work?" id="video-how">
+  <Steps>
+    <Step>### Book your appointment Select your expert and choose a time</Step>
+    <Step>### Get confirmation Receive an email with your video link</Step>
+    <Step>### Join the call Click **Join Call** at your appointment time</Step>
+    <Step>### Connect Meet your expert via secure, encrypted video</Step>
+  </Steps>
+</Accordion>
 
-If you experience issues:
-1. Refresh your browser
-2. Check your internet connection
-3. Try a different browser
-4. Contact support@eleva.care for immediate help
+<Accordion title="What technology do I need?" id="tech-requirements">
+  <Tabs items={['Mobile', 'Computer']}>
+    <Tab value="Mobile">
+      **For smartphones and tablets:** - Camera and microphone (built-in) - Stable internet or WiFi
+      connection - Updated mobile browser (Safari, Chrome)
+    </Tab>
+    <Tab value="Computer">
+      **For laptops and desktops:** - Webcam and microphone - Stable internet connection - Latest
+      browser version (Chrome, Safari, Firefox, Edge)
+    </Tab>
+  </Tabs>
+</Accordion>
 
-### Are consultations confidential?
+<Accordion title="What if I have technical issues?" id="tech-issues">
+Don't panic! Try these steps:
 
-Yes. All consultations are private and encrypted. Only you and your expert can access your session. We comply with healthcare privacy regulations.
+1. **Refresh your browser** - Often fixes most issues
+2. **Check your internet** - Try moving closer to your router
+3. **Switch browsers** - Try Chrome if you're using another browser
+4. **Contact support** - Email support@eleva.care for immediate help
 
-## Payments
+<Callout type="info">
+  Your expert will wait for you. If the issue persists, they can reschedule at no extra cost.
+</Callout>
+</Accordion>
 
-### What payment methods do you accept?
+<Accordion title="Are consultations confidential?" id="confidential">
+  **Absolutely.** All consultations are: - ✅ Private and encrypted end-to-end - ✅ Accessible only
+  to you and your expert - ✅ Compliant with GDPR and healthcare privacy regulations - ✅ Never
+  recorded without your explicit consent
+</Accordion>
 
-- Credit/Debit cards (Visa, Mastercard, Amex)
-- Multibanco (Portugal)
-- Bank transfers (select regions)
+</Accordions>
 
-### When am I charged?
+## Payments & Refunds
 
-You're charged when you book your appointment. Payment is held securely until 24 hours after your consultation is completed.
+<Accordions type="single">
 
-### Can I get a refund?
+<Accordion title="What payment methods do you accept?" id="payment-methods">
+We accept multiple payment methods for your convenience:
 
-Refund eligibility depends on when you cancel:
-- 48+ hours before: Full refund
-- 24-48 hours before: 50% refund
-- Less than 24 hours: No refund
+| Method                     | Availability                       |
+| -------------------------- | ---------------------------------- |
+| **Credit/Debit Cards**     | Visa, Mastercard, Amex (worldwide) |
+| **Multibanco**             | Portugal only                      |
+| **Bank Transfers**         | Select regions                     |
+| **Apple Pay / Google Pay** | Where available                    |
 
-Some experts have their own cancellation policies, so check before booking.
+</Accordion>
 
-### Can I use insurance?
+<Accordion title="When am I charged?" id="when-charged">
+You're charged **when you book** your appointment. The payment is held securely until 24 hours after your consultation is completed, then released to your expert.
 
-Eleva Care doesn't process insurance directly, but you can download receipts for insurance reimbursement claims. Coverage varies by insurance provider.
+This protects you in case of cancellations or no-shows.
+
+</Accordion>
+
+<Accordion title="What's your refund policy?" id="refund-policy">
+Our cancellation and refund policy:
+
+| When you cancel                  | Refund      |
+| -------------------------------- | ----------- |
+| **48+ hours** before appointment | 100% refund |
+| **24-48 hours** before           | 50% refund  |
+| **Less than 24 hours**           | No refund   |
+
+<Callout type="info">
+  Some experts have their own cancellation policies. Always check before booking.
+</Callout>
+</Accordion>
+
+<Accordion title="Can I use insurance?" id="insurance">
+Eleva Care doesn't process insurance directly, but you can:
+1. Download detailed receipts from your dashboard
+2. Submit them to your insurance for reimbursement
+3. Coverage varies by insurance provider and plan
+
+Contact your insurance provider to check if telehealth consultations are covered.
+
+</Accordion>
+
+</Accordions>
 
 ## Account & Privacy
 
-### How do I update my profile?
+<Accordions type="single">
 
-1. Click your profile icon
-2. Go to **Account Settings**
-3. Update your information
-4. Save changes
+<Accordion title="How do I update my profile?" id="update-profile">
+  <Steps>
+    <Step>### Click your profile icon Located in the top right corner</Step>
+    <Step>### Go to Account Settings Select the information you want to update</Step>
+    <Step>### Make your changes Update email, phone, or personal details</Step>
+    <Step>### Save Your changes are applied immediately</Step>
+  </Steps>
+</Accordion>
 
-### Is my health information secure?
+<Accordion title="Is my health information secure?" id="data-security">
+**Yes.** We take your privacy seriously:
 
-Yes. We use industry-standard encryption and security practices:
-- Data encrypted in transit and at rest
-- GDPR and LGPD compliant
-- Regular security audits
-- No selling of personal data
+- 🔐 **Encrypted** - Data encrypted in transit and at rest
+- 🇪🇺 **GDPR Compliant** - Following EU privacy standards
+- 🇧🇷 **LGPD Compliant** - Following Brazilian privacy law
+- 🔍 **Audited** - Regular third-party security audits
+- 🚫 **Never sold** - We never sell your personal data
 
-### How do I delete my account?
+Read our full [Privacy Policy](/legal/privacy) for details.
 
+</Accordion>
+
+<Accordion title="How do I delete my account?" id="delete-account">
 To delete your account:
-1. Go to **Account Settings**
-2. Click **Delete Account**
-3. Confirm deletion
 
-Note: You must complete or cancel any pending appointments first.
+<Steps>
+  <Step>### Complete pending appointments Cancel or finish any scheduled consultations</Step>
+  <Step>### Go to Account Settings Navigate to the account management section</Step>
+  <Step>### Click Delete Account Confirm your decision</Step>
+</Steps>
+
+<Callout type="warn">
+  **Warning:** Account deletion is permanent. Download any receipts or records you need before deleting.
+</Callout>
+</Accordion>
+
+</Accordions>
 
 ## About Our Experts
 
-### How are experts vetted?
+<Accordions type="single">
 
-All experts on Eleva Care:
-- Are licensed healthcare professionals
-- Undergo identity verification
-- Have their credentials reviewed
-- Agree to our professional standards
+<Accordion title="How are experts vetted?" id="expert-vetting">
+All experts on Eleva Care go through our verification process:
 
-### What's the difference between Community and Top Experts?
+- ✅ **Licensed** - Verified healthcare professionals
+- ✅ **Identity verified** - Government ID confirmation
+- ✅ **Credentials reviewed** - Qualifications and certifications checked
+- ✅ **Professional standards** - Agreement to our code of conduct
+  </Accordion>
 
-**Community Experts** are verified professionals on our platform.
-
+<Accordion title="What's the difference between Community and Top Experts?" id="expert-tiers">
+<Tabs items={['Community Experts', 'Top Experts']}>
+<Tab value="Community Experts">
+**Community Experts** are verified professionals on our platform who:
+- Have completed our verification process
+- Maintain active healthcare licenses
+- Follow our professional standards
+</Tab>
+<Tab value="Top Experts">
 **Top Experts** have earned premium status through:
-- High patient ratings (4.8+ stars)
-- Consistent appointment completion
-- Excellent response times
-- Extended platform experience
+- ⭐ High patient ratings (4.8+ stars)
+- ✅ Consistent appointment completion
+- ⚡ Excellent response times
+- 📅 Extended platform experience
 
-### Can I contact an expert before booking?
+Top Experts may have featured placement and priority support.
 
-Some experts allow pre-booking inquiries. Check the expert's profile for contact options.
+</Tab>
+</Tabs>
+</Accordion>
+
+<Accordion title="Can I contact an expert before booking?" id="contact-before">
+Some experts allow pre-booking inquiries. Check the expert's profile for:
+- Contact options
+- Response time expectations
+- Availability for quick questions
+
+Most simple questions can be answered during your first consultation.
+
+</Accordion>
+
+</Accordions>
 
 ## Technical Support
 
-### What browsers are supported?
+<Accordions type="single">
 
-We support the latest versions of:
-- Google Chrome
-- Safari
-- Mozilla Firefox
-- Microsoft Edge
+<Accordion title="What browsers are supported?" id="browsers">
+We support the latest versions of all major browsers:
 
-### Does Eleva Care have a mobile app?
+| Browser         | Status         |
+| --------------- | -------------- |
+| Google Chrome   | ✅ Recommended |
+| Safari          | ✅ Supported   |
+| Mozilla Firefox | ✅ Supported   |
+| Microsoft Edge  | ✅ Supported   |
 
-Currently, Eleva Care is a web-based platform optimized for mobile browsers. A dedicated mobile app is coming soon.
+<Callout type="idea">
+  **Best experience:** Use Google Chrome for optimal video quality and performance.
+</Callout>
+</Accordion>
 
-### How do I report a technical issue?
+<Accordion title="Does Eleva Care have a mobile app?" id="mobile-app">
+Currently, Eleva Care is a **web-based platform** optimized for mobile browsers. No app download required!
 
-Contact us at support@eleva.care with:
+Simply visit [eleva.care](https://eleva.care) from your phone's browser.
+
+<Callout>
+  **Coming soon:** A dedicated mobile app is in development. Stay tuned!
+</Callout>
+</Accordion>
+
+<Accordion title="How do I report a technical issue?" id="report-issue">
+Contact us at **support@eleva.care** with:
 - Description of the issue
 - Device and browser you're using
 - Screenshots if possible
+- Time when the issue occurred
 
-## Contact Us
+We typically respond within 24 hours.
 
-### How do I contact support?
+</Accordion>
 
-- **Email**: support@eleva.care
-- **Response time**: Within 24 hours
-
-### What are your support hours?
-
-Our support team is available Monday through Friday, 9 AM to 6 PM (Lisbon time). We respond to urgent issues within 24 hours.
+</Accordions>
 
 ---
 
-<Callout type="info">
-  **Didn't find your answer?** Contact us at support@eleva.care and we'll be happy to help.
-</Callout>
+## Still Have Questions?
 
-
+<Cards>
+  <Card title="Contact Support" href="mailto:support@eleva.care">
+    Email us at support@eleva.care for personalized help
+  </Card>
+  <Card title="How to Book" href="/docs/patient/booking">
+    Step-by-step guide to booking your first appointment
+  </Card>
+</Cards>
